@@ -12,6 +12,7 @@ Inactive/former developers:
   * Viktor Kojouharov (Виктор Кожухаров)
  
 Patches (in no special order):
+  * Dominik Meister (:b# support)
   * Konstantin Stepanov (:%foo support, :tabduplicate)
   * Lukas Mai
   * Guido Van Hoecke
